--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "wiki-search",
   "version": "0.1.0",
+  "homepage": "https://pesiok.github.io/wiki-search",
   "private": true,
   "dependencies": {
+    "gh-pages": "^1.0.0",
     "normalize.css": "^7.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -10,7 +12,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && mv build docs",
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
